# sidra-os

./: .gitignore  Cargo.toml  Justfile  MASTER_IMPLEMENTATION_GUIDE.md  MILESTONE_REGISTRY.md  README.md  package.json  pnpm-lock.yaml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/companion/: Cargo.toml
apps/companion/src/: lib.rs
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: ipc.rs  main.rs
apps/kernel-server/: Cargo.toml
apps/kernel-server/src/: audit.rs  auth.rs  config.rs  enroll.rs  lib.rs  lifecycle.rs  main.rs  mirror.rs  serve.rs  session.rs  stream.rs
services/agents/: Cargo.toml
services/agents/charters/: corvus.toml  lyra.toml
services/agents/src/: agent_trait.rs  analyst.rs  lib.rs  writer.rs
services/artifacts-exec/: Cargo.toml
services/artifacts-exec/src/: conformance.rs  lib.rs
services/artifacts-exec/src/audit/: emit.rs  mod.rs
services/artifacts-exec/src/domain/: artifact.rs  events.rs  grant.rs  manifest.rs  mod.rs  run.rs  values.rs
services/artifacts-exec/src/grant/: derive.rs  effective.rs  mod.rs  resolve.rs  revoke.rs
services/artifacts-exec/src/host_fns/: connector.rs  effect.rs  local.rs  mod.rs
services/artifacts-exec/src/run/: bounds.rs  instantiate.rs  lifecycle.rs  mod.rs
services/artifacts-exec/src/validate/: mod.rs
services/artifacts-exec/tests/: artifacts_exec_tests.rs
services/calibration/: Cargo.toml
services/calibration/src/: lib.rs
services/calibration/src/compute/: estimates.rs  mod.rs  novelty.rs  risk.rs  threshold.rs
services/calibration/src/domain/: events.rs  mod.rs  values.rs
services/calibration/src/guard/: held_out.rs  mod.rs  no_egress.rs
services/calibration/src/ingest/: mod.rs  read_model.rs  sample.rs
services/calibration/src/metric/: aggregate.rs  mod.rs  walk_forward.rs  window.rs
services/calibration/src/mirror/: runs.rs
services/calibration/src/provenance/: adjustment.rs  inspect.rs  mod.rs
services/calibration/src/runner/: mod.rs
services/calibration/src/store/: mod.rs  params.rs  read.rs  revert.rs
services/companion/: Cargo.toml
services/companion/src/: lib.rs
services/companion/src/domain/: device.rs  mod.rs  outbox.rs  values.rs
services/companion/src/pairing/: key.rs  mod.rs  verify.rs
services/companion/src/reconcile/: mod.rs
services/companion/src/render/: build.rs  mod.rs  payload.rs
services/companion/src/snapshot/: approvals.rs  build.rs  mod.rs
services/compilation/: Cargo.toml
services/compilation/src/: lib.rs
services/compilation/src/activation/: activate.rs  mod.rs  propose.rs  reject.rs
services/compilation/src/ceiling/: check.rs
services/compilation/src/domain/: activation.rs  candidate.rs  events.rs  mod.rs  normalized_step.rs  observation.rs  signature.rs  values.rs
services/compilation/src/mirror/: write.rs
services/connectors/: Cargo.toml
services/connectors/src/: lib.rs
services/decisions/: Cargo.toml
services/decisions/src/: lib.rs
services/delegation/: Cargo.toml
services/delegation/src/: conformance.rs  lib.rs
services/delegation/tests/: delegation_tests.rs
services/departments/: Cargo.toml
services/departments/src/: lib.rs
services/evolution/: Cargo.toml
services/evolution/src/: lib.rs
services/memory/: Cargo.toml
services/memory/src/: assembler.rs  chunker.rs  hybrid_search.rs  lib.rs  memory_errors.rs  vector_store.rs  working_memory.rs
services/memory/tests/: retrieval_test.rs
services/mission/: Cargo.toml
services/mission/src/: lib.rs
services/mission/tests/: charter.rs  dependency_direction.rs  values.rs
services/models/: Cargo.toml
services/models/src/: accounting.rs  lib.rs  model_errors.rs  provider.rs  router.rs
services/models/tests/: router_test.rs
services/orchestrator/: Cargo.toml
services/orchestrator/src/: lib.rs  orchestrator.rs
services/orchestrator/tests/: orchestration_test.rs
services/plugins/: Cargo.toml
services/plugins/src/: lib.rs  manager.rs  manifest.rs  plugin_errors.rs  sandbox.rs
services/plugins/tests/: plugin_test.rs
services/portability/: Cargo.toml
services/portability/src/: lib.rs
services/seats/: Cargo.toml
services/seats/src/: conformance.rs  lib.rs
services/seats/tests/: seats_tests.rs
services/security/: Cargo.toml
services/security/src/: audit.rs  broker.rs  egress.rs  errors.rs  fence.rs  keychain.rs  lib.rs
services/self-review/: Cargo.toml
services/self-review/src/: lib.rs
services/store/: Cargo.toml
services/store/migrations/: 0005_budget_department_ceiling.sql  0006_workorder_engagement_scoping.sql  0009_veto_records.sql  0010_division_executives.sql  0012_registrar.sql  0014_standards_guards.sql  0015_registries.sql  0017_pack_installs.sql  0021_mission_tasks.sql  0023_mission_dispatches.sql  0024_mission_outcomes.sql  0025_connector_manifests.sql  0026_connector_grants.sql  0029_connector_events.sql  0030_connector_conformance.sql  0032_voice_directives.sql  0033_executable_artifacts.sql  0034_seats_and_identity.sql  0036_kernel_extraction.sql  0037_directive_input_method.sql  0037_sync_and_conflict_resolution.sql  0038_voice_captures.sql  0043_seat_fences.sql  0044_seat_budgets.sql  0048_approval_resolutions.sql  0049_client_enrollments.sql  0051_sync_cursors.sql  0056_template_provenance.sql  0057_calibration_parameters.sql  0058_estimate_error_samples.sql  0059_calibration_runs.sql  0060_calibration_weights.sql  0063_evaluation_runs.sql  0065_workflow_candidates.sql  0066_candidate_activations.sql  0067_structure_reviews.sql  0068_department_health.sql  0069_structure_proposals.sql  V11__department_packs.sql  V13__exchange.sql  (+40 more)
services/store/src/: artifact_exec_store.rs  delegation_store.rs  errors.rs  event_log.rs  lib.rs  projections.rs  seat_store.rs  vault.rs  voice_store.rs
services/store/tests/: event_log_test.rs  migration_test.rs
services/sync/: Cargo.toml
services/sync/src/: lib.rs
services/tools/: Cargo.toml
services/tools/src/: lib.rs  tool_trait.rs
(+980 files in other folders)
