[package]
name = "sidractl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-kernel = { path = "../../services/kernel" }
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "sidractl"
path = "src/main.rs"
