[package]
name = "sidra-kernel-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-kernel = { path = "../../services/kernel" }
sidra-store = { path = "../../services/store" }
sidra-security = { path = "../../services/security" }
sidra-seats = { path = "../../services/seats" }
sidra-models = { path = "../../services/models" }
sidra-orchestrator = { path = "../../services/orchestrator" }
sidra-transport = { path = "../../packages/transport" }

rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[lib]
name = "sidra_kernel_server"
path = "src/lib.rs"

[[bin]]
name = "sidra-kernel-server"
path = "src/main.rs"
