[package]
name = "sidra-compilation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-store = { path = "../store" }
sidra-security = { path = "../security" }
sidra-calibration = { path = "../calibration" }
sidra-decisions = { path = "../decisions" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "1.0"
sha2 = "0.10"
thiserror = "1.0"
rusqlite = "0.31"
