[package]
name = "sidra-connectors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-security = { path = "../security" }
sidra-store = { path = "../store" }
sidra-plugins = { path = "../plugins" }
sidra-departments = { path = "../departments" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
semver = "1.0"
thiserror = "1.0"
ulid = "1.1"
url = "2.5"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
