[package]
name = "sidra-connectors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-security = { path = "../security" }
sidra-store = { path = "../store" }
sidra-plugins = { path = "../plugins" }
sidra-departments = { path = "../departments" }
keyring = "2.1"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
semver = "1.0"
thiserror = { workspace = true }
ulid = { workspace = true }
url = "2.5"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
