[package]
name = "sidra-departments"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-store = { path = "../store" }
sidra-security = { path = "../security" }
sidra-memory = { path = "../memory" }
sidra-models = { path = "../models" }
sidra-orchestrator = { path = "../orchestrator" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true }
