[package]
name = "sidra-evolution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-mission = { path = "../mission" }
sidra-store = { path = "../store" }
sidra-security = { path = "../security" }
sidra-departments = { path = "../departments" }
sidra-decisions = { path = "../decisions" }
sidra-calibration = { path = "../calibration" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
