[package]
name = "sidra-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-store = { path = "../store" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ulid = "1.1"

[dev-dependencies]
tempfile = "3.8"
