# sidra-mission — the Mission Engine.
#
# Ref: docs-v2/03-Intelligence/MISSION_ENGINE_ARCHITECTURE.md

[package]
name        = "sidra-mission"
version     = "0.1.0"
description = "Mission Engine — the planning subsystem of Sidra OS."
publish     = false
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sidra-departments = { path = "../departments" }

[dev-dependencies]

[lints]
workspace = true
