# sidra-mission — the Mission Engine.
# Ref: docs-v2/03-Intelligence/MISSION_ENGINE_ARCHITECTURE.md

[package]
name        = "sidra-mission"
version.workspace      = true
description = "Mission Engine — the planning subsystem of Sidra OS."
publish     = false
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-departments = { path = "../departments" }
sidra-store = { path = "../store" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
