[package]
name = "sidra-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ulid = "1.1"

[dev-dependencies]
tempfile = "3.8"
