[package]
name = "sidra-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-store = { path = "../store" }
sidra-security = { path = "../security" }
sidra-memory = { path = "../memory" }
sidra-models = { path = "../models" }
sidra-tools = { path = "../tools" }
sidra-agents = { path = "../agents" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
