[package]
name = "sidra-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-store = { path = "../store" }
sidra-security = { path = "../security" }
sidra-plugin-sdk = { path = "../../packages/plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
thiserror = "1.0"
ulid = "1.1"

[dev-dependencies]
tempfile = "3.8"
