[package]
name = "sidra-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-store = { path = "../store" }
sidra-security = { path = "../security" }
sidra-plugin-sdk = { path = "../../packages/plugin-sdk" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = "1.0"
thiserror = { workspace = true }
ulid = { workspace = true }
wasmi = "0.31"

[dev-dependencies]
tempfile = "3.8"
