[package]
name = "sidra-portability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-store = { path = "../store" }
sidra-security = { path = "../security" }
sidra-seats = { path = "../seats" }
sidra-departments = { path = "../departments" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "1.0"
thiserror = "1.0"
sha2 = "0.10"
rusqlite = "0.31"
