[package]
name = "sidra-seats"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-security = { path = "../security" }
sidra-store = { path = "../store" }
sidra-memory = { path = "../memory" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ulid = "1.1"
thiserror = "1.0"

[lints]
workspace = true
