[package]
name = "sidra-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../packages/domain" }
sidra-voice = { path = "../voice" }
sidra-artifacts-exec = { path = "../artifacts-exec" }
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
ulid = "1.1"

[dev-dependencies]
tempfile = "3.8"
