[package]
name = "sidra-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../../packages/domain" }
sidra-kernel = { path = "../../../services/kernel" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }

[[bin]]
name = "sidra-app"
path = "src/main.rs"
