[package]
name = "sidra-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sidra-domain = { path = "../../../packages/domain" }
sidra-kernel = { path = "../../../services/kernel" }
sidra-store = { path = "../../../services/store" }
sidra-security = { path = "../../../services/security" }
sidra-memory = { path = "../../../services/memory" }
sidra-models = { path = "../../../services/models" }
sidra-tools = { path = "../../../services/tools" }
sidra-agents = { path = "../../../services/agents" }
sidra-orchestrator = { path = "../../../services/orchestrator" }
sidra-plugins = { path = "../../../services/plugins" }
sidra-voice = { path = "../../../services/voice" }
sidra-seats = { path = "../../../services/seats" }
sidra-artifacts-exec = { path = "../../../services/artifacts-exec" }
sidra-delegation = { path = "../../../services/delegation" }
sidra-transport = { path = "../../../packages/transport" }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5.0"
tauri = { version = "2.0", features = [] }

[build-dependencies]
tauri-build = "2.0"

[[bin]]
name = "sidra-app"
path = "src/main.rs"
